parser/parser.output
Terminals unused in grammar

   TOKEN_WHILE
   TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: decl program
    2        | %empty

    3 atomic: literals
    4       | id

    5 literals: TOKEN_INT_LIT
    6         | TOKEN_STR_LIT
    7         | TOKEN_CHAR_LIT
    8         | TOKEN_FALSE
    9         | TOKEN_TRUE

   10 id: TOKEN_ID

   11 expr_0: id TOKEN_INCREMENT
   12       | id TOKEN_DECREMENT
   13       | TOKEN_LPAREN expr_main TOKEN_RPAREN
   14       | expr_0 TOKEN_LBRACKET expr_main TOKEN_RBRACKET
   15       | id TOKEN_LPAREN expr_eps TOKEN_RPAREN
   16       | atomic

   17 expr_1: expr_0
   18       | TOKEN_MINUS expr_0
   19       | TOKEN_NOT expr_0

   20 expr_2: expr_1
   21       | expr_1 TOKEN_EXPONENT expr_2

   22 expr_3: expr_2
   23       | expr_3 TOKEN_MOD expr_2
   24       | expr_3 TOKEN_MULT expr_2
   25       | expr_3 TOKEN_DIV expr_2

   26 expr_4: expr_3
   27       | expr_4 TOKEN_PLUS expr_3
   28       | expr_4 TOKEN_MINUS expr_3

   29 expr_5: expr_4
   30       | expr_5 TOKEN_GT expr_4
   31       | expr_5 TOKEN_GTE expr_4
   32       | expr_5 TOKEN_LT expr_4
   33       | expr_5 TOKEN_LTE expr_4
   34       | expr_5 TOKEN_EQ expr_4
   35       | expr_5 TOKEN_NOT_EQ expr_4

   36 expr_6: expr_5
   37       | expr_6 TOKEN_AND expr_5

   38 expr_7: expr_6
   39       | expr_7 TOKEN_OR expr_6

   40 expr_8: expr_7
   41       | expr_7 TOKEN_ASSIGN expr_8
   42       | expr_7 TOKEN_QMARK expr_8 TOKEN_COLON expr_8

   43 expr_main: expr_8

   44 expr_list: expr_main TOKEN_COMMA expr_list
   45          | expr_main

   46 expr_eps: expr_list
   47         | %empty

   48 stmt_bunch: stmt stmt_bunch
   49           | %empty

   50 stmt_braced: TOKEN_LBRACE stmt_bunch TOKEN_RBRACE

   51 expr_main_eps: expr_main
   52              | %empty

   53 stmt: unmatched_stmt
   54     | matched_stmt

   55 unmatched_stmt: TOKEN_IF TOKEN_LPAREN expr_main TOKEN_RPAREN stmt
   56               | TOKEN_IF TOKEN_LPAREN expr_main TOKEN_RPAREN matched_stmt TOKEN_ELSE unmatched_stmt
   57               | TOKEN_FOR TOKEN_LPAREN expr_main_eps TOKEN_SEMI expr_main_eps TOKEN_SEMI expr_main_eps TOKEN_RPAREN unmatched_stmt

   58 matched_stmt: non_problem_stmt
   59             | TOKEN_FOR TOKEN_LPAREN expr_main_eps TOKEN_SEMI expr_main_eps TOKEN_SEMI expr_main_eps TOKEN_RPAREN matched_stmt
   60             | TOKEN_IF TOKEN_LPAREN expr_main TOKEN_RPAREN matched_stmt TOKEN_ELSE matched_stmt

   61 non_problem_stmt: expr_main TOKEN_SEMI
   62                 | TOKEN_RETURN expr_main TOKEN_SEMI
   63                 | TOKEN_PRINT expr_eps TOKEN_SEMI
   64                 | decl
   65                 | stmt_braced

   66 expr_braced: TOKEN_LBRACE expr_braced TOKEN_RBRACE TOKEN_COMMA expr_braced
   67            | TOKEN_LBRACE expr_braced TOKEN_RBRACE
   68            | expr_list

   69 decl: decl_start TOKEN_ASSIGN expr_main TOKEN_SEMI
   70     | decl_start TOKEN_SEMI
   71     | decl_start TOKEN_ASSIGN TOKEN_LBRACE expr_braced TOKEN_RBRACE TOKEN_SEMI
   72     | decl_start TOKEN_ASSIGN stmt_braced

   73 decl_start: id TOKEN_COLON type

   74 type: TOKEN_STRING
   75     | TOKEN_BOOLEAN
   76     | TOKEN_AUTO
   77     | TOKEN_INT
   78     | TOKEN_CHAR
   79     | TOKEN_VOID
   80     | TOKEN_ARRAY TOKEN_LBRACKET expr_main TOKEN_RBRACKET type
   81     | TOKEN_ARRAY TOKEN_LBRACKET TOKEN_RBRACKET type
   82     | TOKEN_FUNCTION type TOKEN_LPAREN param_eps TOKEN_RPAREN

   83 param_list: decl_start TOKEN_COMMA param_list
   84           | decl_start

   85 param_eps: param_list
   86          | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_ARRAY (258) 80 81
TOKEN_AUTO (259) 76
TOKEN_BOOLEAN (260) 75
TOKEN_CHAR (261) 78
TOKEN_ELSE (262) 56 60
TOKEN_IF (263) 55 56 60
TOKEN_FALSE (264) 8
TOKEN_TRUE (265) 9
TOKEN_FOR (266) 57 59
TOKEN_FUNCTION (267) 82
TOKEN_INT (268) 77
TOKEN_PRINT (269) 63
TOKEN_RETURN (270) 62
TOKEN_STRING (271) 74
TOKEN_VOID (272) 79
TOKEN_WHILE (273)
TOKEN_ID (274) 10
TOKEN_RPAREN (275) 13 15 55 56 57 59 60 82
TOKEN_LPAREN (276) 13 15 55 56 57 59 60 82
TOKEN_RBRACKET (277) 14 80 81
TOKEN_LBRACKET (278) 14 80 81
TOKEN_RBRACE (279) 50 66 67 71
TOKEN_LBRACE (280) 50 66 67 71
TOKEN_INCREMENT (281) 11
TOKEN_DECREMENT (282) 12
TOKEN_NOT (283) 19
TOKEN_EXPONENT (284) 21
TOKEN_MULT (285) 24
TOKEN_DIV (286) 25
TOKEN_MOD (287) 23
TOKEN_PLUS (288) 27
TOKEN_MINUS (289) 18 28
TOKEN_GT (290) 30
TOKEN_LT (291) 32
TOKEN_GTE (292) 31
TOKEN_LTE (293) 33
TOKEN_EQ (294) 34
TOKEN_NOT_EQ (295) 35
TOKEN_ASSIGN (296) 41 69 71 72
TOKEN_COMMA (297) 44 66 83
TOKEN_COLON (298) 42 73
TOKEN_SEMI (299) 57 59 61 62 63 69 70 71
TOKEN_AND (300) 37
TOKEN_OR (301) 39
TOKEN_QMARK (302) 42
TOKEN_STR_LIT (303) 6
TOKEN_CHAR_LIT (304) 7
TOKEN_INT_LIT (305) 5
TOKEN_ERROR (306)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1 2, on right: 0 1
atomic (54)
    on left: 3 4, on right: 16
literals (55)
    on left: 5 6 7 8 9, on right: 3
id (56)
    on left: 10, on right: 4 11 12 15 73
expr_0 (57)
    on left: 11 12 13 14 15 16, on right: 14 17 18 19
expr_1 (58)
    on left: 17 18 19, on right: 20 21
expr_2 (59)
    on left: 20 21, on right: 21 22 23 24 25
expr_3 (60)
    on left: 22 23 24 25, on right: 23 24 25 26 27 28
expr_4 (61)
    on left: 26 27 28, on right: 27 28 29 30 31 32 33 34 35
expr_5 (62)
    on left: 29 30 31 32 33 34 35, on right: 30 31 32 33 34 35 36 37
expr_6 (63)
    on left: 36 37, on right: 37 38 39
expr_7 (64)
    on left: 38 39, on right: 39 40 41 42
expr_8 (65)
    on left: 40 41 42, on right: 41 42 43
expr_main (66)
    on left: 43, on right: 13 14 44 45 51 55 56 60 61 62 69 80
expr_list (67)
    on left: 44 45, on right: 44 46 68
expr_eps (68)
    on left: 46 47, on right: 15 63
stmt_bunch (69)
    on left: 48 49, on right: 48 50
stmt_braced (70)
    on left: 50, on right: 65 72
expr_main_eps (71)
    on left: 51 52, on right: 57 59
stmt (72)
    on left: 53 54, on right: 48 55
unmatched_stmt (73)
    on left: 55 56 57, on right: 53 56 57
matched_stmt (74)
    on left: 58 59 60, on right: 54 56 59 60
non_problem_stmt (75)
    on left: 61 62 63 64 65, on right: 58
expr_braced (76)
    on left: 66 67 68, on right: 66 67 71
decl (77)
    on left: 69 70 71 72, on right: 1 64
decl_start (78)
    on left: 73, on right: 69 70 71 72 83 84
type (79)
    on left: 74 75 76 77 78 79 80 81 82, on right: 73 80 81 82
param_list (80)
    on left: 83 84, on right: 83 85
param_eps (81)
    on left: 85 86, on right: 82


State 0

    0 $accept: . program $end

    TOKEN_ID  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program     go to state 2
    id          go to state 3
    decl        go to state 4
    decl_start  go to state 5


State 1

   10 id: TOKEN_ID .

    $default  reduce using rule 10 (id)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

   73 decl_start: id . TOKEN_COLON type

    TOKEN_COLON  shift, and go to state 7


State 4

    1 program: decl . program

    TOKEN_ID  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program     go to state 8
    id          go to state 3
    decl        go to state 4
    decl_start  go to state 5


State 5

   69 decl: decl_start . TOKEN_ASSIGN expr_main TOKEN_SEMI
   70     | decl_start . TOKEN_SEMI
   71     | decl_start . TOKEN_ASSIGN TOKEN_LBRACE expr_braced TOKEN_RBRACE TOKEN_SEMI
   72     | decl_start . TOKEN_ASSIGN stmt_braced

    TOKEN_ASSIGN  shift, and go to state 9
    TOKEN_SEMI    shift, and go to state 10


State 6

    0 $accept: program $end .

    $default  accept


State 7

   73 decl_start: id TOKEN_COLON . type

    TOKEN_ARRAY     shift, and go to state 11
    TOKEN_AUTO      shift, and go to state 12
    TOKEN_BOOLEAN   shift, and go to state 13
    TOKEN_CHAR      shift, and go to state 14
    TOKEN_FUNCTION  shift, and go to state 15
    TOKEN_INT       shift, and go to state 16
    TOKEN_STRING    shift, and go to state 17
    TOKEN_VOID      shift, and go to state 18

    type  go to state 19


State 8

    1 program: decl program .

    $default  reduce using rule 1 (program)


State 9

   69 decl: decl_start TOKEN_ASSIGN . expr_main TOKEN_SEMI
   71     | decl_start TOKEN_ASSIGN . TOKEN_LBRACE expr_braced TOKEN_RBRACE TOKEN_SEMI
   72     | decl_start TOKEN_ASSIGN . stmt_braced

    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_LBRACE    shift, and go to state 23
    TOKEN_NOT       shift, and go to state 24
    TOKEN_MINUS     shift, and go to state 25
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    atomic       go to state 29
    literals     go to state 30
    id           go to state 31
    expr_0       go to state 32
    expr_1       go to state 33
    expr_2       go to state 34
    expr_3       go to state 35
    expr_4       go to state 36
    expr_5       go to state 37
    expr_6       go to state 38
    expr_7       go to state 39
    expr_8       go to state 40
    expr_main    go to state 41
    stmt_braced  go to state 42


State 10

   70 decl: decl_start TOKEN_SEMI .

    $default  reduce using rule 70 (decl)


State 11

   80 type: TOKEN_ARRAY . TOKEN_LBRACKET expr_main TOKEN_RBRACKET type
   81     | TOKEN_ARRAY . TOKEN_LBRACKET TOKEN_RBRACKET type

    TOKEN_LBRACKET  shift, and go to state 43


State 12

   76 type: TOKEN_AUTO .

    $default  reduce using rule 76 (type)


State 13

   75 type: TOKEN_BOOLEAN .

    $default  reduce using rule 75 (type)


State 14

   78 type: TOKEN_CHAR .

    $default  reduce using rule 78 (type)


State 15

   82 type: TOKEN_FUNCTION . type TOKEN_LPAREN param_eps TOKEN_RPAREN

    TOKEN_ARRAY     shift, and go to state 11
    TOKEN_AUTO      shift, and go to state 12
    TOKEN_BOOLEAN   shift, and go to state 13
    TOKEN_CHAR      shift, and go to state 14
    TOKEN_FUNCTION  shift, and go to state 15
    TOKEN_INT       shift, and go to state 16
    TOKEN_STRING    shift, and go to state 17
    TOKEN_VOID      shift, and go to state 18

    type  go to state 44


State 16

   77 type: TOKEN_INT .

    $default  reduce using rule 77 (type)


State 17

   74 type: TOKEN_STRING .

    $default  reduce using rule 74 (type)


State 18

   79 type: TOKEN_VOID .

    $default  reduce using rule 79 (type)


State 19

   73 decl_start: id TOKEN_COLON type .

    $default  reduce using rule 73 (decl_start)


State 20

    8 literals: TOKEN_FALSE .

    $default  reduce using rule 8 (literals)


State 21

    9 literals: TOKEN_TRUE .

    $default  reduce using rule 9 (literals)


State 22

   13 expr_0: TOKEN_LPAREN . expr_main TOKEN_RPAREN

    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_NOT       shift, and go to state 24
    TOKEN_MINUS     shift, and go to state 25
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    atomic     go to state 29
    literals   go to state 30
    id         go to state 31
    expr_0     go to state 32
    expr_1     go to state 33
    expr_2     go to state 34
    expr_3     go to state 35
    expr_4     go to state 36
    expr_5     go to state 37
    expr_6     go to state 38
    expr_7     go to state 39
    expr_8     go to state 40
    expr_main  go to state 45


State 23

   50 stmt_braced: TOKEN_LBRACE . stmt_bunch TOKEN_RBRACE
   71 decl: decl_start TOKEN_ASSIGN TOKEN_LBRACE . expr_braced TOKEN_RBRACE TOKEN_SEMI

    TOKEN_IF        shift, and go to state 46
    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_FOR       shift, and go to state 47
    TOKEN_PRINT     shift, and go to state 48
    TOKEN_RETURN    shift, and go to state 49
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_LBRACE    shift, and go to state 50
    TOKEN_NOT       shift, and go to state 24
    TOKEN_MINUS     shift, and go to state 25
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    $default  reduce using rule 49 (stmt_bunch)

    atomic            go to state 29
    literals          go to state 30
    id                go to state 51
    expr_0            go to state 32
    expr_1            go to state 33
    expr_2            go to state 34
    expr_3            go to state 35
    expr_4            go to state 36
    expr_5            go to state 37
    expr_6            go to state 38
    expr_7            go to state 39
    expr_8            go to state 40
    expr_main         go to state 52
    expr_list         go to state 53
    stmt_bunch        go to state 54
    stmt_braced       go to state 55
    stmt              go to state 56
    unmatched_stmt    go to state 57
    matched_stmt      go to state 58
    non_problem_stmt  go to state 59
    expr_braced       go to state 60
    decl              go to state 61
    decl_start        go to state 5


State 24

   19 expr_1: TOKEN_NOT . expr_0

    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    atomic    go to state 29
    literals  go to state 30
    id        go to state 31
    expr_0    go to state 62


State 25

   18 expr_1: TOKEN_MINUS . expr_0

    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    atomic    go to state 29
    literals  go to state 30
    id        go to state 31
    expr_0    go to state 63


State 26

    6 literals: TOKEN_STR_LIT .

    $default  reduce using rule 6 (literals)


State 27

    7 literals: TOKEN_CHAR_LIT .

    $default  reduce using rule 7 (literals)


State 28

    5 literals: TOKEN_INT_LIT .

    $default  reduce using rule 5 (literals)


State 29

   16 expr_0: atomic .

    $default  reduce using rule 16 (expr_0)


State 30

    3 atomic: literals .

    $default  reduce using rule 3 (atomic)


State 31

    4 atomic: id .
   11 expr_0: id . TOKEN_INCREMENT
   12       | id . TOKEN_DECREMENT
   15       | id . TOKEN_LPAREN expr_eps TOKEN_RPAREN

    TOKEN_LPAREN     shift, and go to state 64
    TOKEN_INCREMENT  shift, and go to state 65
    TOKEN_DECREMENT  shift, and go to state 66

    $default  reduce using rule 4 (atomic)


State 32

   14 expr_0: expr_0 . TOKEN_LBRACKET expr_main TOKEN_RBRACKET
   17 expr_1: expr_0 .

    TOKEN_LBRACKET  shift, and go to state 67

    $default  reduce using rule 17 (expr_1)


State 33

   20 expr_2: expr_1 .
   21       | expr_1 . TOKEN_EXPONENT expr_2

    TOKEN_EXPONENT  shift, and go to state 68

    $default  reduce using rule 20 (expr_2)


State 34

   22 expr_3: expr_2 .

    $default  reduce using rule 22 (expr_3)


State 35

   23 expr_3: expr_3 . TOKEN_MOD expr_2
   24       | expr_3 . TOKEN_MULT expr_2
   25       | expr_3 . TOKEN_DIV expr_2
   26 expr_4: expr_3 .

    TOKEN_MULT  shift, and go to state 69
    TOKEN_DIV   shift, and go to state 70
    TOKEN_MOD   shift, and go to state 71

    $default  reduce using rule 26 (expr_4)


State 36

   27 expr_4: expr_4 . TOKEN_PLUS expr_3
   28       | expr_4 . TOKEN_MINUS expr_3
   29 expr_5: expr_4 .

    TOKEN_PLUS   shift, and go to state 72
    TOKEN_MINUS  shift, and go to state 73

    $default  reduce using rule 29 (expr_5)


State 37

   30 expr_5: expr_5 . TOKEN_GT expr_4
   31       | expr_5 . TOKEN_GTE expr_4
   32       | expr_5 . TOKEN_LT expr_4
   33       | expr_5 . TOKEN_LTE expr_4
   34       | expr_5 . TOKEN_EQ expr_4
   35       | expr_5 . TOKEN_NOT_EQ expr_4
   36 expr_6: expr_5 .

    TOKEN_GT      shift, and go to state 74
    TOKEN_LT      shift, and go to state 75
    TOKEN_GTE     shift, and go to state 76
    TOKEN_LTE     shift, and go to state 77
    TOKEN_EQ      shift, and go to state 78
    TOKEN_NOT_EQ  shift, and go to state 79

    $default  reduce using rule 36 (expr_6)


State 38

   37 expr_6: expr_6 . TOKEN_AND expr_5
   38 expr_7: expr_6 .

    TOKEN_AND  shift, and go to state 80

    $default  reduce using rule 38 (expr_7)


State 39

   39 expr_7: expr_7 . TOKEN_OR expr_6
   40 expr_8: expr_7 .
   41       | expr_7 . TOKEN_ASSIGN expr_8
   42       | expr_7 . TOKEN_QMARK expr_8 TOKEN_COLON expr_8

    TOKEN_ASSIGN  shift, and go to state 81
    TOKEN_OR      shift, and go to state 82
    TOKEN_QMARK   shift, and go to state 83

    $default  reduce using rule 40 (expr_8)


State 40

   43 expr_main: expr_8 .

    $default  reduce using rule 43 (expr_main)


State 41

   69 decl: decl_start TOKEN_ASSIGN expr_main . TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 84


State 42

   72 decl: decl_start TOKEN_ASSIGN stmt_braced .

    $default  reduce using rule 72 (decl)


State 43

   80 type: TOKEN_ARRAY TOKEN_LBRACKET . expr_main TOKEN_RBRACKET type
   81     | TOKEN_ARRAY TOKEN_LBRACKET . TOKEN_RBRACKET type

    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_RBRACKET  shift, and go to state 85
    TOKEN_NOT       shift, and go to state 24
    TOKEN_MINUS     shift, and go to state 25
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    atomic     go to state 29
    literals   go to state 30
    id         go to state 31
    expr_0     go to state 32
    expr_1     go to state 33
    expr_2     go to state 34
    expr_3     go to state 35
    expr_4     go to state 36
    expr_5     go to state 37
    expr_6     go to state 38
    expr_7     go to state 39
    expr_8     go to state 40
    expr_main  go to state 86


State 44

   82 type: TOKEN_FUNCTION type . TOKEN_LPAREN param_eps TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 87


State 45

   13 expr_0: TOKEN_LPAREN expr_main . TOKEN_RPAREN

    TOKEN_RPAREN  shift, and go to state 88


State 46

   55 unmatched_stmt: TOKEN_IF . TOKEN_LPAREN expr_main TOKEN_RPAREN stmt
   56               | TOKEN_IF . TOKEN_LPAREN expr_main TOKEN_RPAREN matched_stmt TOKEN_ELSE unmatched_stmt
   60 matched_stmt: TOKEN_IF . TOKEN_LPAREN expr_main TOKEN_RPAREN matched_stmt TOKEN_ELSE matched_stmt

    TOKEN_LPAREN  shift, and go to state 89


State 47

   57 unmatched_stmt: TOKEN_FOR . TOKEN_LPAREN expr_main_eps TOKEN_SEMI expr_main_eps TOKEN_SEMI expr_main_eps TOKEN_RPAREN unmatched_stmt
   59 matched_stmt: TOKEN_FOR . TOKEN_LPAREN expr_main_eps TOKEN_SEMI expr_main_eps TOKEN_SEMI expr_main_eps TOKEN_RPAREN matched_stmt

    TOKEN_LPAREN  shift, and go to state 90


State 48

   63 non_problem_stmt: TOKEN_PRINT . expr_eps TOKEN_SEMI

    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_NOT       shift, and go to state 24
    TOKEN_MINUS     shift, and go to state 25
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    $default  reduce using rule 47 (expr_eps)

    atomic     go to state 29
    literals   go to state 30
    id         go to state 31
    expr_0     go to state 32
    expr_1     go to state 33
    expr_2     go to state 34
    expr_3     go to state 35
    expr_4     go to state 36
    expr_5     go to state 37
    expr_6     go to state 38
    expr_7     go to state 39
    expr_8     go to state 40
    expr_main  go to state 91
    expr_list  go to state 92
    expr_eps   go to state 93


State 49

   62 non_problem_stmt: TOKEN_RETURN . expr_main TOKEN_SEMI

    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_NOT       shift, and go to state 24
    TOKEN_MINUS     shift, and go to state 25
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    atomic     go to state 29
    literals   go to state 30
    id         go to state 31
    expr_0     go to state 32
    expr_1     go to state 33
    expr_2     go to state 34
    expr_3     go to state 35
    expr_4     go to state 36
    expr_5     go to state 37
    expr_6     go to state 38
    expr_7     go to state 39
    expr_8     go to state 40
    expr_main  go to state 94


State 50

   50 stmt_braced: TOKEN_LBRACE . stmt_bunch TOKEN_RBRACE
   66 expr_braced: TOKEN_LBRACE . expr_braced TOKEN_RBRACE TOKEN_COMMA expr_braced
   67            | TOKEN_LBRACE . expr_braced TOKEN_RBRACE

    TOKEN_IF        shift, and go to state 46
    TOKEN_FALSE     shift, and go to state 20
    TOKEN_TRUE      shift, and go to state 21
    TOKEN_FOR       shift, and go to state 47
    TOKEN_PRINT     shift, and go to state 48
    TOKEN_RETURN    shift, and go to state 49
    TOKEN_ID        shift, and go to state 1
    TOKEN_LPAREN    shift, and go to state 22
    TOKEN_LBRACE    shift, and go to state 50
    TOKEN_NOT       shift, and go to state 24
    TOKEN_MINUS     shift, and go to state 25
    TOKEN_STR_LIT   shift, and go to state 26
    TOKEN_CHAR_LIT  shift, and go to state 27
    TOKEN_INT_LIT   shift, and go to state 28

    $default  reduce using rule 49 (stmt_bunch)

    atomic            go to state 29
    literals          go to state 30
    id                go to state 51
    expr_0            go to state 32
    expr_1            go to state 33
    expr_2            go to state 34
    expr_3            go to state 35
    expr_4            go to state 36
    expr_5            go to state 37
    expr_6            go to state 38
    expr_7            go to state 39
    expr_8            go to state 40
    expr_main         go to state 52
    expr_list         go to state 53
    stmt_bunch        go to state 54
    stmt_braced       go to state 55
    stmt              go to state 56
    unmatched_stmt    go to state 57
    matched_stmt      go to state 58
    non_problem_stmt  go to state 59
    expr_braced       go to state 95
    decl              go to state 61
    decl_start        go to state 5


State 51
